_sass/_header.scss
body.home {
  .description {
    display: block;
  }
  
  #logo {
    width: 135px;
  }
}

header {
  width: 100%;
  padding-bottom: 22px;
  background: #11ab91 url('../images/montagnes.jpg');
  background-size: cover;
  background-position: center bottom;
  
  ul.menu {
    margin-top: 32px;
    border-color: transparentize(white, 0.75);
    
    a {
      color: white;
      border-color: transparentize(white, 0.75);
    }
  }
}

.description {
  display: none;
  padding: 32px 0 0;
  font-size: 1.786em;
  line-height: 1.32;
  text-decoration: none;
  color: white;
}

#logo {
  display: block;
  width: 80px;
  height: auto;
  overflow: hidden;
  background-image: url('../images/topo.png');
  background-attachment: fixed;
  
  image-rendering:optimizeSpeed;             /* Legal fallback */
  image-rendering:-moz-crisp-edges;          /* Firefox        */
  image-rendering:-o-crisp-edges;            /* Opera          */
  image-rendering:-webkit-optimize-contrast; /* Safari         */
  image-rendering:optimize-contrast;         /* CSS3 Proposed  */
  image-rendering:crisp-edges;               /* CSS4 Proposed  */
  image-rendering:pixelated;                 /* CSS4 Proposed  */
  -ms-interpolation-mode:nearest-neighbor;   /* IE8+           */

  img {
    display: block;
  }
}

@media 
only screen and (-webkit-min-device-pixel-ratio: 2),
only screen and (min--moz-device-pixel-ratio: 2),
only screen and (-moz-min-device-pixel-ratio: 2),
only screen and (-o-min-device-pixel-ratio: 2/1),
only screen and (min-device-pixel-ratio: 2),
only screen and (min-resolution: 192dpi),
only screen and (min-resolution: 2dppx) {
  #logo {
    background-image: url('../images/topo@2x.png');
  }
}

@media only screen and (min-width: $medium-breakpoint) {
  body.home {
    header .container {
      height: auto;
    }
    
    #logo {
      width: 181px;
    }
    
    header {
      background-position: center bottom;
    }
    
    .description {
      padding-top: 215px;
      padding-bottom: 135px;
      font-size: 40px;
      line-height: 1.3;
    }
  }

  header {
    background-image: url('../images/vignette.png'), url('../images/montagnes.jpg');
    background-position: center 87%;
    background-size: 100% 100%, cover;
  }

  header .container {
    position: relative;
    height: 180px;
  }
  
  #logo {
    width: 106px;
    position: fixed;
  }
  
  header ul.menu {
    position: absolute;
    top: 0;
    right: 0;
  }
}

@media only screen and (min-width: $large-breakpoint) {
  body.home {
    #logo {
      width: 219px;
    }
    
    header .container {
      padding-left: 160px;
    }
    
    .description {
      padding-top: 260px;
      padding-bottom: 160px;
    }
  }
  
  header .container {
    margin: 0 auto;
    height: 210px;
    width: 960px;
  }
}

// Gossages pour s'assurer que la photo de montages arrive à une place cool
@media only screen and (min-width: 1140px) {
  body.home header { background-position: center 70%; }
}

@media only screen and (min-width: 1300px) {
  body.home header { background-position: center 80%; }
  header { background-position: center 82%; }
}

